# hacker-toolkit

./: CMakeLists.txt  README.md
demo/hook-wrapper/: CMakeLists.txt  README.md  main.cpp
demo/htk-defer/: CMakeLists.txt  README.md  main.cpp
demo/unindent-literal/: CMakeLists.txt  README.md  main.cpp
demo/win32-console/: CMakeLists.txt  README.md  main.cpp
demo/win32-process/: CMakeLists.txt  README.md  main.cpp
demo/xor-literal/: CMakeLists.txt  README.md  main.cpp
include/hackertoolkit/: hook-wrapper.h  htk-defer.h  unindent-literal.h  win32-console.h  win32-process.h  xor-literal.h
